--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 *.userosscache
 *.sln.docstates
 
+
+your-profile-asp-api/appsettings.json
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
